Version 0.193 (one after 0.192)

debuginfod: Add CORS (webapp access) support to webapi.

libdw: Add dwarf_language and dwarf_language_lower_bound functions.

Version 0.192 "New rules, faster tools"

CONDUCT: A new code of conduct has been adopted.  See the
	 CONDUCT file for more information.

debuginfod: Add per-file signature verification for integrity
            checking, using RPM IMA scheme from Fedora/RHEL.

	    New API for metadata queries: file name -> buildid.

	    Server-side extraction of files from kernel debuginfo
	    packages is significantly faster. Now takes < 0.25 seconds,
	    down from ~50 seconds.

libdw:	    New functions dwfl_set_sysroot, dwfl_frame_unwound_source
	    and dwfl_unwound_source_str.

stacktrace: Experimental new tool that can process a stream of stack
            samples from the Sysprof profiler and unwind them into call
            chains. Enable on x86 with --enable-stacktrace. See
            README.eu-stacktrace in the development branch for detailed
            usage instructions:
            https://sourceware.org/cgit/elfutils/tree/README.eu-stacktrace?h=users/serhei/eu-stacktrace

Version 0.191 "Bug fixes in C major"

libdw: dwarf_addrdie now supports binaries lacking a .debug_aranges
       section.

       Improved support for DWARF package files.  Add new function
       dwarf_cu_dwp_section_info.

debuginfod: Caching eviction logic improvements to improve retention
            of small/frequent/slow files such as Fedora's vdso.debug.

srcfiles: Can now fetch the source files of a DWARF/ELF file and
          place them into a zip.

Version 0.190 "Woke!"

CONTRIBUTING: Switch from real name policy to known identity policy.
              Updated ChangeLog policy (no more separate ChangeLog files).
              There is a SECURITY bug policy now.
              The default branch is now 'main'.

libelf: Add RELR support.

libdw: Recognize .debug_[ct]u_index sections
